--- a/app/.babelrc
+++ b/app/.babelrc
@@ -5,7 +5,17 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": [
+    "transform-runtime",
+    [
+      "component", [
+          {
+            "libraryName": "mint-ui",
+            "style": true
+          }
+        ]
+    ]
+  ],
   "comments": false,
   "env": {
     "test": {
