--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "mint-ui": "^2.2.0",
+    "fontawesome": "^4.7.2",
     "vue": "^2.2.1",
     "vue-resource": "^1.2.1",
     "vue-router": "^2.2.0"
