--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "fontawesome": "^4.7.2",
     "vue": "^2.2.1",
     "vue-resource": "^1.2.1",
