--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "animate.css": "^3.5.2",
-    "fontawesome": "^4.7.2",
+    "font-awesome": "^4.7.0",
     "vue": "^2.2.1",
     "vue-resource": "^1.2.1",
     "vue-router": "^2.2.0"
