修改配置文件

--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "suanban",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "JasonBai007 <byygkcg@163.com>",
