--- a/app/.babelrc
+++ b/app/.babelrc
@@ -5,17 +5,7 @@
     }],
     "stage-2"
   ],
-  "plugins": [
-    "transform-runtime",
-    [
-      "component", [
-          {
-            "libraryName": "mint-ui",
-            "style": true
-          }
-        ]
-    ]
-  ],
+  "plugins": [ "transform-runtime" ],
   "comments": false,
   "env": {
     "test": {
